--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="sp://import/css/shared.css">
 	<link rel="stylesheet" href="sp://import/css/core-dark.css">
 	<link rel="stylesheet" href="sp://import/css/api.css">
+	<link rel="stylesheet" href="style.css">
 
 	<script src="jquery-1.7.1.min.js"></script>
 
@@ -21,8 +22,9 @@
 	</script>
 </head>
 <body>
-	<div>
+	<div id="header">
 		<h1>TwitterTracks</h1>
+		<p>TwitterTracks used the Twitter API to find spotify links. Tracks and Albums are added. The list updates every 10 seconds. You can find the <a href="https://github.com/aronwoost/TwitterTracks" target="_blank">source code on GitHub</a>. <a href="https://github.com/aronwoost/TwitterTracks/issues" target="_blank">Please give feedback</a>!</p>
 	</div>
 	<div id="content"></div>
 </body>
