--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="style.css">
 
 	<script src="jquery-1.7.1.min.js"></script>
+	<script src="async.js"></script>
 
 	<script type="text/javascript">
 		
