--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<div id="header">
 		<h1>TwitterTracks</h1>
-		<p>TwitterTracks used the Twitter API to find spotify links. Tracks and Albums are added. The list updates every 10 seconds. You can find the <a href="https://github.com/aronwoost/TwitterTracks" target="_blank">source code on GitHub</a>. <a href="https://github.com/aronwoost/TwitterTracks/issues" target="_blank">Please give feedback</a>!</p>
+		<p>TwitterTracks used the Twitter API to find spotify links. Tracks and Albums are added (no Playlists) when available in your country. The list updates every 10 seconds. You can find the <a href="https://github.com/aronwoost/TwitterTracks" target="_blank">source code on GitHub</a>. <a href="https://github.com/aronwoost/TwitterTracks/issues" target="_blank">Please give feedback</a>!</p>
 	</div>
 	<div id="content"></div>
 </body>
